fix: github case

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
     </p>
     <p class="links">
       Find me on <a href="https://github.com/josephrace" target="_blank" rel="noopener noreferrer"
-        >Github</a
+        >GitHub</a
       > or <a
         href="https://www.linkedin.com/in/josephrace"
         target="_blank"
