feat: less shouty

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="RACE.DEV">
+<Layout title="race.dev">
   <main>
-    <h1>RACE.DEV</h1>
+    <h1>race.dev</h1>
     <p class="intro">Hi, I'm a web developer working in climate tech.</p>
     <p>
       Currently at <a href="https://ecologi.com" target="_blank" rel="noopener noreferrer"
