--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="race.dev">
   <main>
     <h1>race.dev</h1>
-    <p class="intro">Hi, I'm a web developer working in climate tech.</p>
+    <p class="intro">Hi, I'm a sofware engineer working in climate tech.</p>
     <p>
       Currently at <a href="https://ecologi.com" target="_blank" rel="noopener noreferrer"
         >Ecologi</a
