feat: tree icon

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/x-icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌍</text></svg>"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 256 256%22><rect width=%22256%22 height=%22256%22 fill=%22none%22/><line x1=%22128%22 y1=%22232%22 x2=%22128%22 y2=%2288%22 fill=%22none%22 stroke=%22currentColor%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 stroke-width=%2216%22/><line x1=%22128%22 y1=%22152%22 x2=%2280%22 y2=%22128%22 fill=%22none%22 stroke=%22currentColor%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 stroke-width=%2216%22/><line x1=%22128%22 y1=%22128%22 x2=%22176%22 y2=%22104%22 fill=%22none%22 stroke=%22currentColor%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 stroke-width=%2216%22/><path d=%22M132.48,181.23A64,64,0,1,0,194.75,69.86a8,8,0,0,1-4-4.17,68,68,0,0,0-125.44,0,8,8,0,0,1-4,4.17,64,64,0,1,0,62.27,111.37A8,8,0,0,1,132.48,181.23Z%22 fill=%22none%22 stroke=%22currentColor%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 stroke-width=%2216%22/></svg>"
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
