--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,7 @@ import Layout from "../layouts/Layout.astro";
   }
   h1 {
     font-size: 1rem;
+    font-weight: 400;
   }
   .intro {
     font-size: 2.25rem;
