--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/x-icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 256 256%22><rect width=%22256%22 height=%22256%22 fill=%22none%22/><path d=%22M128,187.88s0,0-.06,0a71.3,71.3,0,0,1-8,4.61V232a8,8,0,0,0,16,0V192.49a71.3,71.3,0,0,1-8-4.61Z%22/><path d=%22M198.1,62.6a76,76,0,0,0-140.2,0A72.29,72.29,0,0,0,16,127.8C15.89,166.62,47.36,199,86.14,200A71.68,71.68,0,0,0,120,192.49V156.94L76.42,135.16a8,8,0,1,1,7.16-14.32L120,139.06V88a8,8,0,0,1,16,0v27.06l36.42-18.22a8,8,0,1,1,7.16,14.32L136,132.94v59.55A71.45,71.45,0,0,0,168,200l1.86,0c38.78-1,70.25-33.36,70.14-72.18A72.26,72.26,0,0,0,198.1,62.6Z%22/></svg>"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Ccircle cx='4' cy='4' r='2'/%3E%3Cpath d='m14 5l3-3l3 3m-6 5l3-3l3 3m-3 4V2m0 12H7l-5 8h20Zm-9 0v8m1-8l5 8'/%3E%3C/g%3E%3C/svg%3E"
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
@@ -27,7 +27,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   :root {
-    --bg: #3f5651;
+    --bg: rgb(63, 86, 81);
     --fg: #c49d99;
   }
   html {
