on instead of in

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
       <Icon name="lucide:tent-tree" size="32" />
       <h1>Joseph Race</h1>
     </div>
-    <p class="intro">Hi, I'm a software engineer working in climate tech.</p>
+    <p class="intro">Hi, I'm a software engineer working on climate tech.</p>
     <p>
       Currently at <a href="https://ecologi.com" target="_blank" rel="noopener noreferrer"
         >Ecologi</a
